--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -40,3 +40,14 @@
     "vendor/font-awesome/solid",
     "vendor/font-awesome/brands"
 ;
+
+.badge {
+  padding-left: .5rem;
+  padding-right: .5rem;
+  position: relative;
+  margin-top: .5em;
+  margin-left: -.5em;
+  color: white;
+  background-color: #00369f;
+  font-size: .8em;
+}
