--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,9 @@
 
 <meta charset="utf-8">
 
+<!-- 添加 favicon 图标 -->
+<link rel="icon" type="image/png" href="{{ base_path }}/images/favicon.png">
+
 {% include seo.html %}
 
 <link href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ base_path }}/feed.xml{% endif %}" type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
