--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 
 <!-- 添加 favicon 图标 -->
-<link rel="icon" type="image/png" href="{{ base_path }}/images/favicon.png">
+<!-- <link rel="icon" type="image/png" href="{{ base_path }}/images/favicon.png"> -->
 
 {% include seo.html %}
 
